[package]
name = "advent_of_code"
version = "0.0.1"
authors = ["Thomas Girod"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3
strip = true

# Uncomment this when AoC is over
#[profile.release]
#lto = true
#codegen-units = 1
#strip = true

[lib]
doctest = false

[dependencies]
anyhow = "*"
itertools = "0.12"
num = "0.4.1"
pico-args = "0.5.0"
rayon = "1.8.0"
regex = "1.10"
